# code-reader-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
apps/: __init__.py
apps/api/: README.md  main.py
apps/web/: README.md  index.html  package-lock.json  package.json
apps/web/src/: main.tsx  styles.css
docs/: AGENTS.md  ARCHITECTURE.md  ASK_MODE.md  CONTEXT_MANAGER.md  DECISIONS.md  MVP.md  PROJECT_PLAN.md  README.md  REPO_MAP_SCHEMA.md  ROADMAP.md  SKILLS.md  TOOLS.md  UI_DESIGN.md  ask-mode.md  context-management.md  design.md  skill-system.md  tool-system.md
src/code_reader_agent/: __init__.py  github_importer.py  interpreter.py  local_state.py  models.py  prompts.py  scanner.py
src/code_reader_agent/agents/: __init__.py
src/code_reader_agent/context/: __init__.py
src/code_reader_agent/memory/: __init__.py  project_memory.py
src/code_reader_agent/repo_map/: __init__.py  builder.py
src/code_reader_agent/runtime/: __init__.py  agent_loop.py  analysis.py  ask_mode.py  llm_client.py  project_manual_generator.py
src/code_reader_agent/skills/: __init__.py  base.py  java_web.py  mybatis.py  registry.py  rest_api.py  spring_boot.py  vue.py
src/code_reader_agent/tools/: __init__.py  builtin.py  executor.py  models.py  read_only.py  registry.py  (+2 more)
tests/: test_agent_loop.py  test_api.py  test_ask_mode.py  test_github_importer.py  test_interpreter.py  test_llm_client.py  test_project_manual_generator.py  test_read_only_tools.py  test_repo_map.py  test_scanner.py  test_skills.py  test_tool_executor.py  test_tool_registry.py  test_tool_result_processor.py
